--- a/materiality89/css/style.css
+++ b/materiality89/css/style.css
@@ -144,3 +144,25 @@ a:hover {
 }
 
 
+/* Style pour le contrôle de sélection */
+.type-filter-control {
+  background-color: white;
+  padding: 10px;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  font-family: Arial, sans-serif;
+}
+
+.type-filter-control h4 {
+  margin-top: 0;
+  margin-bottom: 5px;
+  font-size: 16px;
+}
+
+.type-filter-control select {
+  width: 100%;
+  padding: 5px;
+  font-size: 14px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+}
