--- a/materiality89/css/style.css
+++ b/materiality89/css/style.css
@@ -250,3 +250,29 @@ button:hover {
   border-radius: 3px;
   border: 1px solid #ccc;
 }
+
+/* Style pour le contrôle de filtrage par matériaux */
+.technique-filter-control {
+  background-color: white;
+  opacity: 0.7;
+  padding: 10px;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  font-family: Arial, sans-serif;
+}
+
+.technique-filter-control h4 {
+  margin-top: 0;
+  margin-bottom: 5px;
+  font-size: 16px;
+}
+
+/* Style pour les options de sélection du contrôle de filtrage par couleur */
+.technique-filter-control select {
+  width: 100%;
+  padding: 5px;
+  font-size: 14px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+}
+
