--- a/materiality89/css/style.css
+++ b/materiality89/css/style.css
@@ -189,6 +189,18 @@ button:hover {
   color: #000; /* Couleur du texte */
 }
 
+/* Styles pour les infobulles des curseurs */
+.leaflet-tooltip {
+  opacity: 0.7; /* Opacité de l'infobulle du curseur */
+  background-color: rgba(255, 255, 255, 0.9); /* Couleur de fond de l'infobulle */
+  color: #333; /* Couleur du texte de l'infobulle */
+  border: none; /* Supprimer la bordure de l'infobulle */
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3); /* Ombre légère pour l'infobulle */
+  font-size: 14px; /* Taille de police de l'infobulle */
+  line-height: 1.4; /* Hauteur de ligne de l'infobulle */
+  padding: 8px 12px; /* Espacement intérieur de l'infobulle */
+}
+
 
 /* Style pour le contrôle de sélection */
 .type-filter-control {
@@ -214,18 +226,6 @@ button:hover {
   border: 1px solid #ccc;
 }
 
-/* Styles pour les infobulles des curseurs */
-.leaflet-tooltip {
-  opacity: 0.7; /* Opacité de l'infobulle du curseur */
-  background-color: rgba(255, 255, 255, 0.9); /* Couleur de fond de l'infobulle */
-  color: #333; /* Couleur du texte de l'infobulle */
-  border: none; /* Supprimer la bordure de l'infobulle */
-  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.3); /* Ombre légère pour l'infobulle */
-  font-size: 14px; /* Taille de police de l'infobulle */
-  line-height: 1.4; /* Hauteur de ligne de l'infobulle */
-  padding: 8px 12px; /* Espacement intérieur de l'infobulle */
-}
-
 /* Style pour le contrôle de filtrage par couleur */
 .color-filter-control {
   background-color: white;
@@ -242,7 +242,6 @@ button:hover {
   font-size: 16px;
 }
 
-/* Style pour les options de sélection du contrôle de filtrage par couleur */
 .color-filter-control select {
   width: 100%;
   padding: 5px;
@@ -251,7 +250,7 @@ button:hover {
   border: 1px solid #ccc;
 }
 
-/* Style pour le contrôle de filtrage par matériaux */
+/* Style pour le contrôle de filtrage par technique */
 .technique-filter-control {
   background-color: white;
   opacity: 0.7;
@@ -267,7 +266,6 @@ button:hover {
   font-size: 16px;
 }
 
-/* Style pour les options de sélection du contrôle de filtrage par couleur */
 .technique-filter-control select {
   width: 100%;
   padding: 5px;
