--- a/materiality89/css/style.css
+++ b/materiality89/css/style.css
@@ -201,31 +201,6 @@ button:hover {
   padding: 8px 12px; /* Espacement intérieur de l'infobulle */
 }
 
-
-/* Style pour le contrôle de sélection */
-.type-filter-control {
-  background-color: white;
-  opacity: 0.7;
-  padding: 10px;
-  border: 2px solid #ccc;
-  border-radius: 5px;
-  font-family: Arial, sans-serif;
-}
-
-.type-filter-control h4 {
-  margin-top: 0;
-  margin-bottom: 5px;
-  font-size: 16px;
-}
-
-.type-filter-control select {
-  width: 100%;
-  padding: 5px;
-  font-size: 14px;
-  border-radius: 3px;
-  border: 1px solid #ccc;
-}
-
 /* Style pour le contrôle de filtrage par couleur */
 .color-filter-control {
   background-color: white;
@@ -248,6 +223,11 @@ button:hover {
   font-size: 14px;
   border-radius: 3px;
   border: 1px solid #ccc;
+  transition: background-color 0.3s;
+}
+
+.color-filter-control select:hover {
+  background-color: orange;
 }
 
 /* Style pour le contrôle de filtrage par matériau */
@@ -255,36 +235,51 @@ button:hover {
   background-color: white;
   opacity: 0.7;
   padding: 10px;
+  padding-bottom: 0;
   border: 2px solid #ccc;
   border-radius: 5px;
   font-family: Arial, sans-serif;
+  margin-top: 10px;
 }
 
 .material-filter-control h4 {
   margin-top: 0;
   margin-bottom: 5px;
   font-size: 16px;
+  padding-bottom: 0;
 }
 
-.type-filter-control input[type="text"] {
+.material-filter-control input[type="text"] {
   font-size: 14px;
   padding: 5px;
   border-radius: 3px;
   border: 1px solid #ccc;
-  background-color: #f2f2f2; /* Arrière-plan gris pour la zone de recherche */
+  background-color: #f2f2f2;
 }
 
 .material-filter-control ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
+  margin-top: 5px;
 }
 
 .material-filter-control li {
+  font-family: Arial, sans-serif;
+  font-size: 14px;
   cursor: pointer;
   padding: 5px;
+  background-color: #f2f2f2;
+  border-radius: 3px;
+  transition: background-color 0.3s; 
 }
 
 .material-filter-control li:hover {
-  background-color: #f0f0f0;
+  background-color: orange;
+}
+
+.all-materials-item {
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  cursor: pointer;
 }
