--- a/materiality89/css/style.css
+++ b/materiality89/css/style.css
@@ -165,6 +165,33 @@ button:hover {
   font-style: italic;
 }
 
+
+/*Style pour l'agrandissement de l'image */
+.slide img {
+  cursor: pointer;
+}
+
+.image-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.enlarged-image {
+  max-width: 80%;
+  max-height: 80%;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease; /* Ajouter une transition pour un effet de zoom fluide */
+}
+
 /* Style pour le contrôle de filtre par année */
 .year-filter-control {
   background-color: white;
